--- a/templates/pages/modelo.html
+++ b/templates/pages/modelo.html
@@ -302,7 +302,7 @@
        
         <!-- App badge section-->
         <section class="bg-gradient-primary-to-secondary text-center py-2" >
-            <div class="container px-1">
+            <div class="container px-1 w-100 ">
                 <h2 class="text-center text-black font-alt mb-4"></h2>
                 <h5 class="text-center">Secretária de Saúde de Itaguaí</h5>
                 <a class="" href=""></a>
