--- a/pages/templates/esf.html
+++ b/pages/templates/esf.html
@@ -10,13 +10,13 @@
 
 {% block conteudo %}
 
-<div class="card bg-gradient-primary-to-secondary mt-0 "  align="center" id='pad' >
+<div class="card bg-gradient-primary-to-secondary-2 mt-0 "  align="center" id='pad' >
     <h1>
         Estratégia de
 Saúde da Família 
     </h1>
     <h3>Unidades</h3>
-    <a class="btn btn-primary mt-2 mb-5 mx-auto " href="{% url 'home'%}">Voltar</a>
+    
 
 </div>
 
@@ -29,183 +29,29 @@ Saúde da Família
 <div class="container px-lg-1 mt-5">
     <!-- Page Features-->
     <div class="row gx-lg-5">
-        <div class="col-lg-6 col-xxl-4 mb-5">
+        <div class="col-lg-4 col-xxl-4 mb-5 ">
             <div class="card bg-light border-0 h-100">
                 <div class="card-body text-center p-2 p-lg-5 pt-0 pt-lg-0">
-                    <div class="feature bg-dark bg-gradient text-white rounded-3 mb-4 mt-n4">
+                    <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="https://inovarepontodigital.com.br/login">
-                            <img src="{% static '/img/images/ubs.gif'%}" class="item--image" alt="">
+                        <a href="{% url 'ubsbrisamar'%}">
+                            <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
-                    <h2 class="fs-4 fw-bold">ESF Centro</h2>
+                    <h2 class="fs-4 fw-bold">ESF Piranema</h2>
                 </a>
-                    <p class="mb-0">Rua José Roberto Freire, 71
-
-                        Horário de Atendimento: 08 às 17h</p>
+                    <p class="mb-0">R: Antônio Manuel Pereira S/N 
+                        08:00h ás 17:00h</p>
                 </div>
             </div>
         </div>
-        <div class="col-lg-6 col-xxl-4 mb-5">
+        <div class="col-lg-4 col-xxl-4 mb-5">
             <div class="card bg-light border-0 h-100">
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                    <div class="feature bg-dark bg-gradient text-white rounded-3 mb-4 mt-n4">
+                    <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="http://sigs.net.br/login">
-                            <img src="{% static '/img/images/ubs.gif'%}" class="item--image" alt="">
-                        
-                    </div>
-                    <h2 class="fs-4 fw-bold">ESF Chaperó</h2>
-                </a>
-                    <p class="mb-0">Rua Aristotelina Silva Lino, Esquina com a Rua 16 de Abril – Gleba B
-
-                        Horário de Atendimento: 08 às 17h</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xxl-4 mb-5">
-            <div class="card bg-light border-0 h-100">
-                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                    <div class="feature bg-dark bg-gradient text-white rounded-3 mb-4 mt-n4">
-                        
-                        <a href="http://sigs.net.br/login">
-                            <img src="{% static '/img/images/ubs.gif'%}" class="item--image" alt="">
-                        
-                    </div>
-                    <h2 class="fs-4 fw-bold">ESF Coroa Grande</h2>
-                </a>
-                    <p class="mb-0">Avenida Amaral Peixoto, s/nº
-
-                        Horário de Atendimento: 08 às 17h</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xxl-4 mb-5">
-            <div class="card bg-light border-0 h-100">
-                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                    <div class="feature bg-dark bg-gradient text-white rounded-3 mb-4 mt-n4">
-                        
-                        <a href="http://sigs.net.br/login">
-                            <img src="{% static '/img/images/ubs.gif'%}" class="item--image" alt="">
-                        
-                    </div>
-                    <h2 class="fs-4 fw-bold">ESF Engenho</h2>
-                </a>
-                    <p class="mb-0">Rua João Plaza Gonzales, s/nº Qd: 09 Lt: 01/03 – Loteamento Jardim El Baida
-
-                        Horário de Atendimento: 08 às 17h</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xxl-4 mb-5">
-            <div class="card bg-light border-0 h-100">
-                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                    <div class="feature bg-dark bg-gradient text-white rounded-3 mb-4 mt-n4">
-                        
-                        <a href="http://sigs.net.br/login">
-                            <img src="{% static '/img/images/ubs.gif'%}" class="item--image" alt="">
-                        
-                    </div>
-                    <h2 class="fs-4 fw-bold">ESF Santa Cândida</h2>
-                </a>
-                    <p class="mb-0">Rua Pajé, 01
-
-                        Horário de Atendimento: 08 às 17h</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xxl-4 mb-5">
-            <div class="card bg-light border-0 h-100">
-                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                    <div class="feature bg-dark bg-gradient text-white rounded-3 mb-4 mt-n4">
-                        
-                        <a href="http://sigs.net.br/login">
-                            <img src="{% static '/img/images/ubs.gif'%}" class="item--image" alt="">
-                        
-                    </div>
-                    <h2 class="fs-4 fw-bold">ESF Ilha da Madeira</h2>
-                </a>
-                    <p class="mb-0">Rua Joaquim Fernandes, 419
-
-                        Horário de Atendimento: 08 às 17h</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xxl-4 mb-5">
-            <div class="card bg-light border-0 h-100">
-                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                    <div class="feature bg-dark bg-gradient text-white rounded-3 mb-4 mt-n4">
-                        
-                        <a href="http://sigs.net.br/login">
-                            <img src="{% static '/img/images/ubs.gif'%}" class="item--image" alt="">
-                        
-                    </div>
-                    <h2 class="fs-4 fw-bold">ESF Jardim América</h2>
-                </a>
-                    <p class="mb-0">Rua Estados Unidos, s/nº
-
-                        Horário de Atendimento: 08 às 17h</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xxl-4 mb-5">
-            <div class="card bg-light border-0 h-100">
-                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                    <div class="feature bg-dark bg-gradient text-white rounded-3 mb-4 mt-n4">
-                        
-                        <a href="http://sigs.net.br/login">
-                            <img src="{% static '/img/images/ubs.gif'%}" class="item--image" alt="">
-                        
-                    </div>
-                    <h2 class="fs-4 fw-bold">ESF Mazomba</h2>
-                </a>
-                    <p class="mb-0">Estrada de Mazomba, 700
-
-                        Horário de Atendimento: 08 às 17h</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xxl-4 mb-5">
-            <div class="card bg-light border-0 h-100">
-                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                    <div class="feature bg-dark bg-gradient text-white rounded-3 mb-4 mt-n4">
-                        
-                        <a href="http://sigs.net.br/login">
-                            <img src="{% static '/img/images/ubs.gif'%}" class="item--image" alt="">
-                        
-                    </div>
-                    <h2 class="fs-4 fw-bold">ESF Saco da Prata</h2>
-                </a>
-                    <p class="mb-0">Estrada Bom Jardim, s/nº
-
-                        Horário de Atendimento: 08 às 17h</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xxl-4 mb-5">
-            <div class="card bg-light border-0 h-100">
-                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                    <div class="feature bg-dark bg-gradient text-white rounded-3 mb-4 mt-n4">
-                        
-                        <a href="http://sigs.net.br/login">
-                            <img src="{% static '/img/images/ubs.gif'%}" class="item--image" alt="">
-                        
-                    </div>
-                    <h2 class="fs-4 fw-bold">ESF Texeira</h2>
-                </a>
-                    <p class="mb-0">Rua Genecildo Aguiar Vieira, 1801
-
-                        Horário de Atendimento: 08 às 17h</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xxl-4 mb-5">
-            <div class="card bg-light border-0 h-100">
-                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                    <div class="feature bg-dark bg-gradient text-white rounded-3 mb-4 mt-n4">
-                        
-                        <a href="http://sigs.net.br/login">
-                            <img src="{% static '/img/images/ubs.gif'%}" class="item--image" alt="">
+                        <a href="{% url 'ubscentro'%}">
+                            <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
                     <h2 class="fs-4 fw-bold"> ESF Odenit Maia </h2>
@@ -216,25 +62,130 @@ Saúde da Família
                 </div>
             </div>
         </div>
-        <div class="col-lg-6 col-xxl-4 mb-5">
+        <div class="col-lg-4 col-xxl-4 mb-5">
             <div class="card bg-light border-0 h-100">
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                    <div class="feature bg-dark bg-gradient text-white rounded-3 mb-4 mt-n4">
+                    <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="http://sigs.net.br/login">
-                            <img src="{% static '/img/images/ubs.gif'%}" class="item--image" alt="">
+                        <a href="{% url 'ubschaperoa'%}">
+                            <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
-                    <h2 class="fs-4 fw-bold"> ESF Piranema  </h2>
+                    <h2 class="fs-4 fw-bold"> ESF Chaperó - GLEBA B</h2>
                 </a>
-                    <p class="mb-0">R: Antônio Manuel Pereira S/N 
+                    <p class="mb-0">Rua Aristotelina Silva Lino, Esquina com a Rua 16 de Abril – Gleba B
 
                         Horário de Atendimento: 08 às 17h</p>
                 </div>
             </div>
         </div>
+        <div class="col-lg-4 col-xxl-4 mb-5">
+            <div class="card bg-light border-0 h-100">
+                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                    <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
+                        
+                        <a href="{% url 'ubsengenho'%}">
+                            <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
+                        
+                    </div>
+                    <h2 class="fs-4 fw-bold">ESF Coroa Grande</h2>
+                </a>
+                    <p class="mb-0">Avenida Amaral Peixoto, s/nº
+
+                        Horário de Atendimento: 08 às 17h</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-xxl-4 mb-5">
+            <div class="card bg-light border-0 h-100">
+                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                    <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
+                        
+                        <a href="http://sigs.net.br/login">
+                            <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
+                        
+                    </div>
+                    <h2 class="fs-4 fw-bold"> ESF Santa Cândida</h2>
+                </a>
+                    <p class="mb-0">Rua Pajé, 01
+
+                        Horário de Atendimento: 08 às 17h</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-xxl-4 mb-5">
+            <div class="card bg-light border-0 h-100">
+                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                    <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
+                        
+                        <a href="http://sigs.net.br/login">
+                            <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
+                        
+                    </div>
+                    <h2 class="fs-4 fw-bold"> ESF Ilha da Madeira</h2>
+                </a>
+                    <p class="mb-0">Rua Joaquim Fernandes, 419
+
+                        Horário de Atendimento: 08 às 17h</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-xxl-4 mb-5">
+            <div class="card bg-light border-0 h-100">
+                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                    <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
+                        
+                        <a href="http://sigs.net.br/login">
+                            <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
+                        
+                    </div>
+                    <h2 class="fs-4 fw-bold">ESF Jardim América</h2>
+                </a>
+                    <p class="mb-0">Rua Estados Unidos, s/nº
+
+                        Horário de Atendimento: 08 às 17h</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-xxl-4 mb-5">
+            <div class="card bg-light border-0 h-100">
+                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                    <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
+                        
+                        <a href="http://sigs.net.br/login">
+                            <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
+                        
+                    </div>
+                    <h2 class="fs-4 fw-bold">ESF Mazomba</h2>
+                </a>
+                    <p class="mb-0">Estrada de Mazomba, 700
+
+                        Horário de Atendimento: 08 às 17h</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-xxl-4 mb-5">
+            <div class="card bg-light border-0 h-100">
+                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                    <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
+                        
+                        <a href="http://sigs.net.br/login">
+                            <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
+                        
+                    </div>
+                    <h2 class="fs-4 fw-bold"> ESF Saco da Prata </h2>
+                </a>
+                    <p class="mb-0">Estrada Bom Jardim, s/nº
+
+                        Horário de Atendimento: 08 às 17h</p>
+                </div>
+            </div>
+        </div>
+   
 </section>
 </div>
+
+
 
 
 
