--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -24,7 +24,7 @@
   <a href="{% url 'home' %}" class="btn btn-primary" >Voltar</a>
   
   {% else %}
-<div class="card text-center  w-75 m-lg-auto p-3">
+<div class="card text-center m-lg-auto p-3">
     <div class="card-header p-2 bg-gradient-primary-to-secondary-2">
       <h3 >Login</h3>
     </div>
