--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -25,7 +25,7 @@
       <h2 class="featurette-heading"> <span class="text-muted"></span></h2>
       <p class="lead text-capitalize"></p>
     </div>
-    <div >
+    <div class="card mb-auto">
       <ul class="p-1 m-3" style="display:Flex; justify-content:center; list-style: none;">
         <li>
           <a class='m-lg-2' href="https://vacinacaocovid19.saude.rj.gov.br/" target="_blank">	
