--- a/pages/templates/ubs.html
+++ b/pages/templates/ubs.html
@@ -152,7 +152,7 @@ Saúde
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="http://sigs.net.br/login">
+                        <a href="{% url 'ubsvilageny'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
@@ -160,7 +160,7 @@ Saúde
                 </a>
                     <p class="mb-0">Rod. Rio Santos, Esq. com Rua São Benedito, S/N-Lts 22,23,e 24- Qd.13</p>
 
-                       <p> Horário de Atendimento: 08 às 17h</p>
+                       <p> Horário de Atendimento: 24 horas</p>
                 </div>
             </div>
         </div>
