--- a/templates/pages/modelo.html
+++ b/templates/pages/modelo.html
@@ -85,7 +85,7 @@
 
       <li><a class="dropdown-item" href="{% url 'esf' %}"><i class="bi bi-house"></i> Estratégia Saúde da Família</a></li>
       <li><a class="dropdown-item" href="{% url 'ubs' %}"><i class="bi bi-house"></i> Unidades Básicas de Saúde</a></li>
-      <li><a class="dropdown-item" href=""><i class="bi bi-house"></i> Especialidades</a></li>
+      <li><a class="dropdown-item" href="{% url 'especialidades' %}"><i class="bi bi-house"></i> Especialidades</a></li>
       <li><hr class="dropdown-divider"></li>
       <li><a class="dropdown-item" href="{% url 'cpd' %}"><i class="bi bi-mouse2-fill"></i> Cpd Saúde</a></li>
     </ul>
