--- a/pages/templates/esf.html
+++ b/pages/templates/esf.html
@@ -34,14 +34,14 @@ Saúde da Família
                 <div class="card-body text-center p-2 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="{% url 'ubsbrisamar'%}">
+                        <a href="{% url 'esfpiranema'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
                     <h2 class="fs-4 fw-bold">ESF Piranema</h2>
                 </a>
-                    <p class="mb-0">R: Antônio Manuel Pereira S/N 
-                        08:00h ás 17:00h</p>
+                    <p class="mb-0">R: Antônio Manuel Pereira S/N </p>
+                    <p>Horário de Atendimento: 08 às 17h</p>
                 </div>
             </div>
         </div>
@@ -50,15 +50,15 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="{% url 'ubscentro'%}">
+                        <a href="{% url 'esfodenit'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
                     <h2 class="fs-4 fw-bold"> ESF Odenit Maia </h2>
                 </a>
-                    <p class="mb-0">Rua: Estados Unidos S/N
+                    <p class="mb-0">Rua: Estados Unidos S/N</p>
 
-                        Horário de Atendimento: 08 às 17h</p>
+                        <p>Horário de Atendimento: 08 às 17h</p>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="{% url 'ubschaperoa'%}">
+                        <a href="{% url 'esfchaperob'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
@@ -84,7 +84,7 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="{% url 'ubsengenho'%}">
+                        <a href="{% url 'esfcoroa'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
@@ -101,15 +101,15 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="http://sigs.net.br/login">
+                        <a href="{% url 'esfsanta'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
                     <h2 class="fs-4 fw-bold"> ESF Santa Cândida</h2>
                 </a>
-                    <p class="mb-0">Rua Pajé, 01
+                    <p class="mb-0">Rua Pajé, 01</p>
 
-                        Horário de Atendimento: 08 às 17h</p>
+                        <P>Horário de Atendimento: 08 às 17h</p>
                 </div>
             </div>
         </div>
@@ -118,7 +118,7 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="http://sigs.net.br/login">
+                        <a href="{% url 'esfcoroa'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
@@ -135,7 +135,7 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="http://sigs.net.br/login">
+                        <a href="{% url 'esfcoroa'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
@@ -152,7 +152,7 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="http://sigs.net.br/login">
+                        <a href="{% url 'esfcoroa'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
@@ -169,7 +169,7 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="http://sigs.net.br/login">
+                        <a href="{% url 'esfcoroa'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
