--- a/pages/templates/cpd.html
+++ b/pages/templates/cpd.html
@@ -2,3 +2,29 @@
 {% load static %}
 
 
+{% block conteudo %}
+
+<div class="card bg-gradient-primary-to-secondary-2 text-center">
+    <p><h2>{{unidade}}</h2></p>
+
+
+
+
+
+{% endblock conteudo %}
+
+
+
+
+
+{% block lista %}
+
+
+
+{% endblock lista %}
+
+
+
+
+
+
