--- a/templates/pages/modelo.html
+++ b/templates/pages/modelo.html
@@ -119,9 +119,10 @@
                 </button>
                 <ul class="dropdown-menu">
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="{% url 'perfilupdate' %}"><i class="bi bi-clipboard-check"></i> Meus dados</a></li>
+                    <li><a class="dropdown-item" href=""><i class="bi bi-clipboard-check"></i> Meus dados</a></li>
                     <li><a class="dropdown-item" href=""><i class="bi bi-exclamation-circle"></i> Alterar senha</a></li>
-                    <li><a class="dropdown-item" href="{% url 'registro' %}"><i class="bi bi-exclamation-circle"></i> Novo User</a></li>
+                    <li><a class="dropdown-item" href="{% url 'registro' %}"><i class="bi bi-exclamation-circle"></i> Novo Usuário</a></li>
+                    <li><a class="dropdown-item" href="{% url 'adminlist' %}"><i class="bi bi-exclamation-circle"></i> Lista Usuários</a></li>
 
                     <li><a class="dropdown-item" href="{% url 'paineladm' %}"><i class="bi bi-controller"></i> Painel ADM</a></li>
                     <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="bi bi-download"></i> Sair</a></li>
