--- a/usuarios/templates/form.html
+++ b/usuarios/templates/form.html
@@ -26,6 +26,7 @@
       
       <div class="button">
       <button class="btn btn-primary" type="submit">{{botao}}</button>
+      <a class="btn btn-primary" href="{% url 'home'%}">Voltar</a>
       {% if  user.perfil.nome %}
       <a class="btn btn-primary" href="{% url 'home'%}">Voltar</a>
       {% endif %}
