--- a/pages/templates/cpd.html
+++ b/pages/templates/cpd.html
@@ -7,6 +7,13 @@
 <div class="card bg-gradient-primary-to-secondary-2 text-center">
     <p><h2>{{unidade}}</h2></p>
 
+    <a href="{% url 'teste' %}"> teste</a>
+
+    <p>Sistema {{nome}} {{sis}}</p>
+    <p>Ip Local {{iplocal}}</p>
+
+
+
 
 
 
