--- a/templates/pages/modelo.html
+++ b/templates/pages/modelo.html
@@ -115,14 +115,16 @@
             {% if request.user.is_authenticated %}
             <div class="btn-group dropstart" aria-labelledby="navbarDropdownMenuLink">
                 <button type="button" class="btn btn-primary rounded-pill px-4 me-2 mb-2 mb-lg-0" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-arrow-right-circle me-2"></i><span class="small"> {{ request.user }}  {{user.groups.all.0.name }}</span>
+                    <i class="bi bi-arrow-right-circle me-2"></i><span class="small"> <i class="bi bi-person-fill"></i>  {{ request.user }}  <i class="bi bi-award"></i> {{user.groups.all.0.name }}</span>
                 </button>
                 <ul class="dropdown-menu">
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href=""><i class="bi bi-clipboard-check"></i> Meus dados</a></li>
+                   
+                    <li><a class="dropdown-item" href="{% url 'usuario_dados' %}"><i class="bi bi-clipboard-check"></i> Meus dados</a></li>
+                  
                     <li><a class="dropdown-item" href=""><i class="bi bi-exclamation-circle"></i> Alterar senha</a></li>
-                    <li><a class="dropdown-item" href="{% url 'registro' %}"><i class="bi bi-exclamation-circle"></i> Novo Usuário</a></li>
-                    <li><a class="dropdown-item" href="{% url 'adminlist' %}"><i class="bi bi-exclamation-circle"></i> Lista Usuários</a></li>
+                    <li><a class="dropdown-item" href="{% url 'registro' %}"><i class="bi bi-person-plus"></i> Novo Usuário</a></li>
+                    <li><a class="dropdown-item" href="{% url 'adminlist' %}"><i class="bi bi-people"></i> Lista Usuários</a></li>
 
                     <li><a class="dropdown-item" href="{% url 'paineladm' %}"><i class="bi bi-controller"></i> Painel ADM</a></li>
                     <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="bi bi-download"></i> Sair</a></li>
