--- a/usuarios/templates/perfil_form.html
+++ b/usuarios/templates/perfil_form.html
@@ -26,10 +26,8 @@
       
       <div class="button">
       <button class="btn btn-primary" type="submit">{{botao}}</button>
-      
-      {% if  user.username %}
-      <a class="btn btn-primary" href="{% url 'adminlist'%}">Voltar</a>
-      {% else %}
+      <a class="btn btn-primary" href="{% url 'home'%}">Voltar</a>
+      {% if  user.perfil.nome %}
       <a class="btn btn-primary" href="{% url 'home'%}">Voltar</a>
       {% endif %}
       <hr>
