--- a/pages/templates/esf.html
+++ b/pages/templates/esf.html
@@ -118,15 +118,15 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="{% url 'esfcoroa'%}">
+                        <a href="{% url 'esfilha'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
                     <h2 class="fs-4 fw-bold"> ESF Ilha da Madeira</h2>
                 </a>
-                    <p class="mb-0">Rua Joaquim Fernandes, 419
+                    <p class="mb-0">Rua Joaquim Fernandes, 419</p>
 
-                        Horário de Atendimento: 08 às 17h</p>
+                        <p>Horário de Atendimento: 08 às 17h</p>
                 </div>
             </div>
         </div>
@@ -135,15 +135,15 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="{% url 'esfcoroa'%}">
+                        <a href="{% url 'esfilha'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
                     <h2 class="fs-4 fw-bold">ESF Jardim América</h2>
                 </a>
-                    <p class="mb-0">Rua Estados Unidos, s/nº
+                    <p class="mb-0">Rua Estados Unidos, s/nº</p>
 
-                        Horário de Atendimento: 08 às 17h</p>
+                        <p>Horário de Atendimento: 08 às 17h</p>
                 </div>
             </div>
         </div>
