--- a/pages/templates/ubs.html
+++ b/pages/templates/ubs.html
@@ -141,7 +141,7 @@ Saúde
                     </div>
                     <h2 class="fs-4 fw-bold"> UBS CALIFÓRNIA</h2>
                 </a>
-                    <p> class="mb-0">Rua: N. Sra. das Graças,LTS 2 e 3 -Q 120</p>
+                    <pclass="mb-0">Rua: N. Sra. das Graças,LTS 2 e 3 -Q 120</pclass=>
 
                        <p> Horário de Atendimento: 08 às 17h</p>
                 </div>
