--- a/pages/templates/esf.html
+++ b/pages/templates/esf.html
@@ -135,7 +135,7 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="{% url 'esfilha'%}">
+                        <a href="{% url 'esfjardim'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
@@ -152,15 +152,15 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="{% url 'esfcoroa'%}">
+                        <a href="{% url 'esfmazomba'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
                     <h2 class="fs-4 fw-bold">ESF Mazomba</h2>
                 </a>
-                    <p class="mb-0">Estrada de Mazomba, 700
+                    <p class="mb-0">Estrada de Mazomba, 700</p>
 
-                        Horário de Atendimento: 08 às 17h</p>
+                       <p> Horário de Atendimento: 08 às 17h</p>
                 </div>
             </div>
         </div>
@@ -169,15 +169,15 @@ Saúde da Família
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="{% url 'esfcoroa'%}">
+                        <a href="{% url 'esfsaco'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
                     <h2 class="fs-4 fw-bold"> ESF Saco da Prata </h2>
                 </a>
-                    <p class="mb-0">Estrada Bom Jardim, s/nº
+                    <p class="mb-0">Estrada Bom Jardim, s/nº</p>
 
-                        Horário de Atendimento: 08 às 17h</p>
+                       <p> Horário de Atendimento: 08 às 17h</p>
                 </div>
             </div>
         </div>
