--- a/pages/templates/esfjardim.html
+++ b/pages/templates/esfjardim.html
@@ -6,7 +6,7 @@
 
 {% block titulo %}
 
-<title>UBS Chaperó</title>
+<title>ESF Jardim América</title>
 
 {% endblock titulo %}
 
@@ -17,7 +17,7 @@
 
 <div class="card bg-gradient-primary-to-secondary mt-0 "  align="center" id='pad' >
     <h1>
-        Bem vindo a Unidade Basica de Saúde Chaperó - Gleba A
+        Bem vindo a Estratégia de Saúde da Família Jardim América
     </h1>
 </div>
 
@@ -51,7 +51,7 @@
           <h2>Ponto Biométrico</h2>
           <p>Sistema de Gestão de Pontos</p>
           <p><a target="a_blank" class="btn btn-info" href="https://inovarepontodigital.com.br/login" role="button">Acessar »</a></p>
-          <p><a  target="a_blank" class="btn btn-primary" href="https://inovarepontodigital.com.br/ponto?token=b80d56395d5a95a1756e17c1979d71a8b6765fe455bd9563f350e9440216673e" role="button">Registro »</a></p>
+          <p><a  target="a_blank" class="btn btn-primary" href="" role="button">Registro »</a></p>
 
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4 text-center">
@@ -72,9 +72,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Unidade de Saúde de Chaperó - Gleba A <span class="text-muted"></span></h2>
-          <p class="lead">Estrada do Chaperó, 21 – Chaperó</p>
-          <p>Horário de Atendimento: 08 às 17h
+          <h2 class="featurette-heading">Estratégia de Saúde da Família Jardim América<span class="text-muted"></span></h2>
+          <p class="lead">Rua Estados Unidos, s/nº</p>
+          <p>Horário de Atendimento: De segunda-feira a sexta-feira De:
+            08:00h ás 17:00h
+            </p>
 
             Especialidades:
             <ul>
@@ -99,7 +101,7 @@
             </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" style="width: 500px; height: 500px;" src="{% static '/img/images/unidades/chaperoa.png'%}" data-holder-rendered="true">
+          <img class="featurette-image img-fluid mx-auto " data-src="holder.js/500x500/auto" alt="500x500" style="width: 700px; height: 400px;" src="{% static '/img/images/unidades/esf.jpg'%}" data-holder-rendered="true">
         </div>
       </div>
 
