--- a/pages/templates/ubs.html
+++ b/pages/templates/ubs.html
@@ -169,7 +169,7 @@ Saúde
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="http://sigs.net.br/login">
+                        <a href="{% url 'ubsvilamargarida'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
@@ -186,7 +186,7 @@ Saúde
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="http://sigs.net.br/login">
+                        <a href="{% url 'ubsvistaalegre'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
