--- a/pages/templates/ubsbrisamar.html
+++ b/pages/templates/ubsbrisamar.html
@@ -72,7 +72,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Unidades de Saúde de Brisamar <span class="text-muted"></span></h2>
+          <h2 class="featurette-heading">Unidade de Saúde de Brisamar <span class="text-muted"></span></h2>
           <p class="lead">Rod. Rio Santos, Esquina com Rua Transversal nº 40-Lts 4 e 5-Q 101</p>
           <p>Horário de Atendimento: 08 às 17h
 
