--- a/pages/templates/ubscalifornia.html
+++ b/pages/templates/ubscalifornia.html
@@ -72,7 +72,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Unidades de Saúde de Califórnia <span class="text-muted"></span></h2>
+          <h2 class="featurette-heading">Unidade de Saúde de Califórnia <span class="text-muted"></span></h2>
           <p class="lead">Rua: N. Sra. das Graças,LTS 2 e 3 -Q 120</p>
           <p>Horário de Atendimento: 08 às 17h
 
