--- a/pages/templates/ubsengenho.html
+++ b/pages/templates/ubsengenho.html
@@ -72,7 +72,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Unidades de Saúde de Engenho <span class="text-muted"></span></h2>
+          <h2 class="featurette-heading">Unidade de Saúde de Engenho <span class="text-muted"></span></h2>
           <p class="lead">Rua João Plaza Gonzales, s/nº Qd: 09 Lt: 01/03 – Loteamento Jardim El Baida</p>
           <p>Horário de Atendimento: 08 às 17h
 
