--- a/pages/templates/ubsmangueira.html
+++ b/pages/templates/ubsmangueira.html
@@ -72,7 +72,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Unidades de Saúde de Mangueira <span class="text-muted"></span></h2>
+          <h2 class="featurette-heading">Unidade de Saúde de Mangueira <span class="text-muted"></span></h2>
           <p class="lead">Rodovia Rio Santos, Esq. Com Av. Bahia Lts. 15,16 e 17 -Qd.09</p>
           <p>Horário de Atendimento: 08 às 17h
 
