--- a/pages/templates/especialidades.html
+++ b/pages/templates/especialidades.html
@@ -3,7 +3,7 @@
 
 
 {% block titulo %}
-<title>::Unidades::</title>
+<title>::Especialidades::</title>
 
 {% endblock titulo %}
 
@@ -49,7 +49,7 @@
                     </div>
                     <h2 class="fs-4 fw-bold">CEFF</h2>
                 </a>
-                    <p class="mb-0">Centro Especializado de Fisioterapia e Fonoaudiologia
+                    <p class="mb-0"> <strong>Centro Especializado de Fisioterapia e Fonoaudiologia</strong> 
                        </p> 
                     <p> Rua José Bonifacio Esquina São Judas Tadeu, S/N</p>
                     <p>De segunda-feira a sexta-feira De: 08:00h ás 17:00h</p>
