--- a/pages/templates/ubscentro.html
+++ b/pages/templates/ubscentro.html
@@ -72,7 +72,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Unidades de Saúde de Centro <span class="text-muted"></span></h2>
+          <h2 class="featurette-heading">Unidade de Saúde de Centro <span class="text-muted"></span></h2>
           <p class="lead">Rua Gilson Braga, s/nº</p>
           <p>Horário de Atendimento: 08 às 17h
 
