--- a/pages/templates/ubsvilageny.html
+++ b/pages/templates/ubsvilageny.html
@@ -72,7 +72,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Unidades de Saúde de Vila Geny <span class="text-muted"></span></h2>
+          <h2 class="featurette-heading">Unidade de Saúde de Vila Geny <span class="text-muted"></span></h2>
           <p class="lead">Rod. Rio Santos, Esq. com Rua São Benedito, S/N-Lts 22,23,e 24- Qd.13</p>
           <p>Horário de Atendimento: 24h</p>
 
