--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -92,9 +92,9 @@
                                       <div class="position-relative">
                                           <!--thumbnail img-->
                                           <div class="ratio_left-cover-1 image-wrapper">
-                                              <a href="https://www.itaguai.rj.gov.br/caminhada-e-corrida-marcam-acao-do-outubro-rosa-em-itaguai/">
+                                              <a href="https://www.instagram.com/p/ClZZgWeP_c_/?igshid=MDJmNzVkMjY%3D">
                                                   <img class="img-fluid w-100"
-                                                       src="{% static 'img/images/22.jpeg'%}"
+                                                       src="{% static 'img/images/noticias/1.png'%}"
                                                        alt="news template img1">
                                               </a>
                                           </div>
@@ -104,13 +104,13 @@
                                               <!-- meta title -->
                                               <div class="news-meta">
                                                 <a target="_blank" href="https://www.itaguai.rj.gov.br/caminhada-e-corrida-marcam-acao-do-outubro-rosa-em-itaguai/">
-                                                    <h2 class="h2 post-title text-white my-1">Caminhada e corrida marcam ação do Outubro Rosa em Itaguaí</h2>
+                                                    <h2 class="h2 post-title text-white my-1">Foi realizado hoje, na Polícia Rodoviaria Federal o Programa de Prevenção de Acidentes</h2>
                                                 </a>
                                                 <a  target="_blank" href="https://www.itaguai.rj.gov.br/caminhada-e-corrida-marcam-acao-do-outubro-rosa-em-itaguai/">
                                                     
                                                 </a>
-                                                <span class="news-author"><a class="text-white font-weight-bold" href=""><a class="p-1 badge badge-primary rounded-0" target="_blank" href="https://www.itaguai.rj.gov.br/caminhada-e-corrida-marcam-acao-do-outubro-rosa-em-itaguai/">Acessar</a>
-                                                    <span class="news-date">03/11/2022</span>
+                                                <span class="news-author"><a class="text-white font-weight-bold" href=""><a class="p-1 badge badge-primary rounded-0" target="_blank" href="https://www.instagram.com/p/ClZZgWeP_c_/?igshid=MDJmNzVkMjY%3D">Acessar</a>
+                                                    <span class="news-date">26/11/2022</span>
                                               </div>
                                           </div>
                                       </div>
