--- a/pages/templates/esfchaperob.html
+++ b/pages/templates/esfchaperob.html
@@ -46,7 +46,7 @@
 
       <!-- Três colunas de texto, abaixo do carousel -->
       <div class="row">
-        <div class="col-lg-7 text-center" >
+        <div class="col-lg-4 text-center" >
           <img class="rounded-circle" src="{% static '/img/images/digital.gif'%}" alt="Generic placeholder image" width="140" height="140">
           <h2>Ponto Biométrico</h2>
           <p>Sistema de Gestão de Pontos</p>
@@ -54,14 +54,26 @@
           <p><a  target="a_blank" class="btn btn-primary" href="https://inovarepontodigital.com.br/ponto?token=b40e9ef99977de0d987d9f54ff6ad34a958337ea23c88293be0e9659c3d5c06c" role="button">Registro »</a></p>
 
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4 text-center">
+        <div class="col-lg-3 text-center">
             <img class="rounded-circle" src="{% static '/img/images/prodig.gif'%}" alt="Generic placeholder image" width="140" height="140">
             <h2>PRODIGI</h2>
             <p>Sistema de Processos digitais e CIs</p>
             <p><a target="a_blank" class="btn btn-info" href="http://prodigi/" role="button">Acessar »</a></p>
           </div><!-- /.col-lg-4 -->
          
+          <div class="col-lg-4 text-center">
+            <img class="rounded-circle bg-dark" src="{% static '/img/images/esusgifgif.gif'%}" alt="Generic placeholder image" width="140" height="140">
+            <h2>E-SUS</h2>
+            <p>Saúde Atenção Primária</p>
+            <p><a class="btn btn-info" href="http://esus.itg.rio/" role="button">Acessar »</a></p>
+          </div><!-- /.col-lg-4 -->
         
+          <div class="col-lg-4 text-center">
+            <img class="rounded-circle bg-dark" src="{% static '/img/images/sistema-1.gif'%}" alt="Generic placeholder image" width="140" height="140">
+            <h2>SISREG</h2>
+            <p>Saúde Atenção Primária</p>
+            <p><a class="btn btn-info" href="https://sisregiii.saude.gov.br/cgi-bin/index" role="button">Acessar »</a></p>
+          </div><!-- /.col-lg-4 -->
   
         
 
