--- a/pages/templates/hmsfx.html
+++ b/pages/templates/hmsfx.html
@@ -74,7 +74,19 @@
                         <p>Sistema de Processos digitais e CIs</p>
                         <p><a class="btn btn-info" href="http://prodigi/" role="button">Acessar »</a></p>
                       </div>
-        
+                      <div class="col-lg-4 text-center">
+                        <img class="rounded-circle bg-dark" src="{% static '/img/images/esusgifgif.gif'%}" alt="Generic placeholder image" width="140" height="140">
+                        <h2>E-SUS</h2>
+                        <p>Saúde Atenção Primária</p>
+                        <p><a class="btn btn-info" href="http://esus.itg.rio/" role="button">Acessar »</a></p>
+                      </div><!-- /.col-lg-4 -->
+                    
+                      <div class="col-lg-4 text-center">
+                        <img class="rounded-circle bg-dark" src="{% static '/img/images/sistema-1.gif'%}" alt="Generic placeholder image" width="140" height="140">
+                        <h2>SISREG</h2>
+                        <p>Saúde Atenção Primária</p>
+                        <p><a class="btn btn-info" href="https://sisregiii.saude.gov.br/cgi-bin/index" role="button">Acessar »</a></p>
+                      </div><!-- /.col-lg-4 -->
                      
         
 
