--- a/pages/templates/esfilha.html
+++ b/pages/templates/esfilha.html
@@ -46,7 +46,7 @@
 
       <!-- Três colunas de texto, abaixo do carousel -->
       <div class="row">
-        <div class="col-lg-7 text-center" >
+        <div class="col-lg-4 text-center" >
           <img class="rounded-circle" src="{% static '/img/images/digital.gif'%}" alt="Generic placeholder image" width="140" height="140">
           <h2>Ponto Biométrico</h2>
           <p>Sistema de Gestão de Pontos</p>
@@ -61,7 +61,19 @@
             <p><a target="a_blank" class="btn btn-info" href="http://prodigi/" role="button">Acessar »</a></p>
           </div><!-- /.col-lg-4 -->
          
+          <div class="col-lg-4 text-center">
+            <img class="rounded-circle bg-dark" src="{% static '/img/images/esusgifgif.gif'%}" alt="Generic placeholder image" width="140" height="140">
+            <h2>E-SUS</h2>
+            <p>Saúde Atenção Primária</p>
+            <p><a class="btn btn-info" href="http://esus.itg.rio/" role="button">Acessar »</a></p>
+          </div><!-- /.col-lg-4 -->
         
+          <div class="col-lg-4 text-center">
+            <img class="rounded-circle bg-dark" src="{% static '/img/images/sistema-1.gif'%}" alt="Generic placeholder image" width="140" height="140">
+            <h2>SISREG</h2>
+            <p>Saúde Atenção Primária</p>
+            <p><a class="btn btn-info" href="https://sisregiii.saude.gov.br/cgi-bin/index" role="button">Acessar »</a></p>
+          </div><!-- /.col-lg-4 -->
   
         
 
