--- a/pages/templates/secretaria.html
+++ b/pages/templates/secretaria.html
@@ -127,7 +127,14 @@
                     <p><a class="btn btn-info" href="http://192.168.10.91:8080/webControle/" role="button">Acessar »</a></p>
                   </div><!-- /.col-lg-4 -->
                 
+                 
                 
+                  <div class="col-lg-4 text-center">
+                    <img class="rounded-circle bg-dark" src="{% static '/img/images/sistema-1.gif'%}" alt="Generic placeholder image" width="140" height="140">
+                    <h2>SISREG</h2>
+                    <p>Saúde Atenção Primária</p>
+                    <p><a class="btn btn-info" href="https://sisregiii.saude.gov.br/cgi-bin/index" role="button">Acessar »</a></p>
+                  </div><!-- /.col-lg-4 -->
                 
         </div>
     </section>
