--- a/pages/templates/esfsaco.html
+++ b/pages/templates/esfsaco.html
@@ -65,7 +65,7 @@
             <p>Saúde Atenção Primária</p>
             <p><a class="btn btn-info" href="http://esus.itg.rio/" role="button">Acessar »</a></p>
           </div><!-- /.col-lg-4 -->
-        
+          <hr class="featurette-divider">
           <div class="col-lg-4 text-center">
             <img class="rounded-circle bg-dark" src="{% static '/img/images/sistema-1.gif'%}" alt="Generic placeholder image" width="140" height="140">
             <h2>SISREG</h2>
