--- a/templates/pages/modelo.html
+++ b/templates/pages/modelo.html
@@ -55,15 +55,15 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-0 my-0 my-lg-0">
                        
-                        <a href="{% url 'home'%}" class="btn btn-primary rounded-pill me-2 px-5 mb-2 mb-lg-0"  >
+                        <a href="{% url 'home'%}" class="btn btn-info rounded-pill me-2 px-5 mb-2 mb-lg-0"  >
                             <span class="d-flex align-items-center">
                                 <i class="bi bi-arrow-right-circle me-2"></i>
-                                <span class="small">   Início   </span>
+                                <span class="small">Início</span>
                                 <a ></a>
                             </span>
                         </a>
                         {% if request.user.is_authenticated %}
-                        <a href="{% url 'sistemas'%}" class="btn btn-primary rounded-pill me-2 px-4 mb-2 mb-lg-0"  >
+                        <a href="{% url 'sistemas'%}" class="btn btn-info rounded-pill me-2 px-4 mb-2 mb-lg-0"  >
                             <span class="d-flex align-items-center">
                                 <i class="bi bi-arrow-right-circle me-2"></i>
                                 <span class="small">Sistemas</span>
@@ -75,7 +75,7 @@
                         {% endif %}
                         <!-- Example single danger button -->
 <div class="btn-group ">
-    <button type="button" class="btn btn-primary  rounded-pill px-4 me-2 mb-2 mb-lg-0" data-bs-toggle="dropdown" aria-expanded="false">
+    <button type="button" class="btn btn-info  rounded-pill px-4 me-2 mb-2 mb-lg-0" data-bs-toggle="dropdown" aria-expanded="false">
         <i class="bi bi-arrow-right-circle me-2"></i><span class="small">Unidades</span>
     </button>
     <ul class="dropdown-menu">
@@ -87,7 +87,7 @@
       <li><a class="dropdown-item" href="{% url 'ubs' %}"><i class="bi bi-house"></i> Unidades Básicas de Saúde</a></li>
       <li><a class="dropdown-item" href="{% url 'especialidades' %}"><i class="bi bi-house"></i> Especialidades</a></li>
       <li><hr class="dropdown-divider"></li>
-      <li><a class="dropdown-item" href="{% url 'cpd' %}"><i class="bi bi-mouse2-fill"></i> Cpd Saúde</a></li>
+      {% comment %} <li><a class="dropdown-item" href="{% url 'cpd' %}"><i class="bi bi-mouse2-fill"></i> Cpd Saúde</a></li> {% endcomment %}
     </ul>
     <li><hr class="dropdown-divider"></li>
   </div>
